packages/FUSOU-APP/src/global.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap");
@import "tailwindcss";
@plugin "daisyui" {
  themes:
    light --default,
    dark --prefersdark;
}

@plugin "daisyui/theme" {
  name: "light";
  default: true;
  prefersdark: false;
  color-scheme: "light";
  --color-base-100: oklch(100% 0 0);
  --color-base-200: oklch(100% 0 0);
  --color-base-300: oklch(92% 0.004 286.32);
  --color-base-content: oklch(21% 0.006 285.885);
  --color-primary: oklch(87% 0.15 154.449);
  --color-primary-content: oklch(29% 0.066 243.157);
  --color-secondary: oklch(89% 0.196 126.665);
  --color-secondary-content: oklch(27% 0.072 132.109);
  --color-accent: oklch(86% 0.127 207.078);
  --color-accent-content: oklch(30% 0.056 229.695);
  --color-neutral: oklch(37% 0.013 285.805);
  --color-neutral-content: oklch(98% 0 0);
  --color-info: oklch(68% 0.169 237.323);
  --color-info-content: oklch(97% 0.013 236.62);
  --color-success: oklch(76% 0.233 130.85);
  --color-success-content: oklch(98% 0.031 120.757);
  --color-warning: oklch(70% 0.213 47.604);
  --color-warning-content: oklch(98% 0.016 73.684);
  --color-error: oklch(63% 0.237 25.331);
  --color-error-content: oklch(97% 0.013 17.38);
  --radius-selector: 0.5rem;
  --radius-field: 0.5rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}

@plugin "daisyui/theme" {
  name: "dark";
  default: false;
  prefersdark: true;
  color-scheme: "dark";
  --color-base-100: oklch(21.6% 0.006 56.043);
  --color-base-200: oklch(21.6% 0.006 56.043);
  --color-base-300: oklch(27% 0.006 286.033);
  --color-base-content: oklch(97.807% 0.029 256.847);
  --color-primary: oklch(87% 0.15 154.449);
  --color-primary-content: oklch(29% 0.066 243.157);
  --color-secondary: oklch(89% 0.196 126.665);
  --color-secondary-content: oklch(27% 0.072 132.109);
  --color-accent: oklch(86% 0.127 207.078);
  --color-accent-content: oklch(30% 0.056 229.695);
  --color-neutral: oklch(37% 0.013 285.805);
  --color-neutral-content: oklch(98% 0 0);
  --color-info: oklch(68% 0.169 237.323);
  --color-info-content: oklch(97% 0.013 236.62);
  --color-success: oklch(76% 0.233 130.85);
  --color-success-content: oklch(98% 0.031 120.757);
  --color-warning: oklch(70% 0.213 47.604);
  --color-warning-content: oklch(98% 0.016 73.684);
  --color-error: oklch(63% 0.237 25.331);
  --color-error-content: oklch(97% 0.013 17.38);
  --radius-selector: 0.5rem;
  --radius-field: 0.5rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}

